# CoActionHero

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  StratifyKernelSettings.json  StratifyLocalSettings.json  StratifySettings.json  ckernelsettings.ini  sl_settings.json
boot/: boot_board_config.c  link_local.h  link_transport.c  link_transport.h  link_transport_usb.c  link_transport_usb.h
build_debug/: makefile  objects.mk
build_debug/src/: subdir.mk
build_debug_boot/: makefile
build_debug_boot/boot/: subdir.mk
build_release/: makefile  objects.mk
build_release/src/: subdir.mk
build_release_boot/: makefile
build_release_boot/boot/: subdir.mk
src/: CMakeLists.txt  board_config.c  board_trace.c  link_transport.c  link_transport.h  link_transport_usb.c  sl_config.h  stratify_symbols.c
